Fix overflow body content and add test

--- a/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
@@ -8,6 +8,10 @@
   padding: $padding;
   line-height: 1.2;
 
+  &__gap {
+    overflow: hidden;
+  }
+
   &__titlesBlock {
     display: flex;
     flex-direction: column;
